--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,26 +1,30 @@
-<div align="center">
-  <h1>Index de tous nos Emails !! :)</h1>
-  
-	<table class="table table-striped">
-  	<tr>
-  	  <th scope="col" style="text-align: center">Liste </th>
-  	  <th scope="col" style="text-align: center">Contenu </th>
-  	</tr>
+<section id="all">
+	<div align="center">
+	 
+	  <h1>Index de tous nos Emails !! :)</h1><br>
+	   <div class="body">
+		<table class="table table-striped">
+	  	<tr>
+	  	  <th scope="col" style="text-align: center">Liste </th>
+	  	  <th scope="col" style="text-align: center">Contenu </th>
+	  	</tr>
 
-    <% @emails.each do |email| %>
-  	<tr id="email<%=email.id%>">
-	  <td class="liste" id= "email_object<%=email.id%>" style="text-align: center; font-weight: 700"><%= email.object %>&nbsp;
-	  	 <div id="btn">
-	  	 <%= link_to "Lire", email, method: :get, remote: true, class: "btn btn-info" %>
-	  	</div>
-	  </td>
-      <td id="email_body<%=email.id%>" style="text-align: center; display:none">
-		<strong>Sujet du mail : <%= email.object %></strong>
-		<br>Contenu du mail : <%= email.body %><br>
-      	<%= link_to "Supprimer", email, method: :delete, remote: true, data: { confirm: 'Tu veux vraiment faire ça :O ?'}, class: "btn btn-danger" %>
-      </td>
-    </tr>
-    <% end %>
-	</table>
-  
-</div>
+	    <% @emails.each do |email| %>
+	  	<tr id="email<%=email.id%>">
+		  <td class="liste" id= "email_object<%=email.id%>" style="text-align: center; font-weight: 700"><%= email.object %>&nbsp;
+		  	 <div id="btn">
+		  	 <%= link_to "Lire", email, method: :get, remote: true, class: "btn btn-info" %>
+		  	</div>
+		  </td>
+	      <td id="email_body<%=email.id%>" style="text-align: center; display:none">
+			<strong>Sujet du mail : <%= email.object %></strong>
+			<br>Contenu du mail : <%= email.body %><br><br>
+	      	<%= link_to "Supprimer", email, method: :delete, remote: true, data: { confirm: 'Tu veux vraiment faire ça :O ?'}, class: "btn btn-danger" %>
+	      </td>
+	    </tr>
+	    <% end %>
+		</table>
+	  </div>
+	  
+	</div>
+</section>
