--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -2,6 +2,11 @@
 	<div align="center">
 	 
 	  <h1>Index de tous nos Emails !! :)</h1><br>
+
+	  <div id="content">
+    	 <%=image_tag 'http://icons.iconarchive.com/icons/uiconstock/socialmedia/512/Email-icon.png'%>
+	  </div>
+
 	   <div class="body">
 		<table class="table table-striped">
 	  	<tr>
